--- a/assets/style/media.css
+++ b/assets/style/media.css
@@ -106,6 +106,12 @@
     display: none;
   }
   /* ----------------------------------- */
+  #skillCard1, #skillCard2, #skillCard3 {
+    width: 60%;
+    margin: auto;
+    margin-bottom: 15px;
+  }
+  /* ----------------------------------- */
   #contact, #checkOut {
     margin: auto;
     width: 100%;
@@ -113,6 +119,9 @@
   }
   #mainSection4 {
     padding-bottom: 15%;
+  }
+  #hobbyText {
+    text-align: justify;
   }
 }
 
