--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -126,7 +126,7 @@ header {
   height: 100%;
   padding-bottom: 150px;
   background: linear-gradient(90deg, rgba(210, 210, 210) 60%, #4B9CD3 60%);
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 #projectsHeader {
   color: #151513;
@@ -140,8 +140,10 @@ header {
 #projectSelector {
   margin-left: 40%;
   font-size: x-large;
-  float: left;
   text-align: center;
+  float: right;
+  width: 90%;
+  background-color: rgb(39, 39, 39);
 }
 .frontSelector {
   color: #4B9CD3;
@@ -150,15 +152,28 @@ header {
   color: #FFFCF2;
 }
 #projectSelector:hover {
-  background: rgb(75, 156, 211,0.5);
-}
-#projectSelText {
-  writing-mode: vertical-rl;
-  text-orientation: upright;
-  background-color: rgb(39, 39, 39);
+  background:  rgba(0,0,0,.6);
   box-shadow: 0 5px 15px rgba(0,0,0,.5);
 }
-#projectCarouselFRONT, #projectCarouselBACK {
+#projectContainer {
+  margin-top: 5%;
+  height: 100%;
+  width: 500px;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  background-color:  rgb(39, 39, 39);
+  text-align: center;
+}
+.prjectTile {
+  width: 45%;
+  margin: 4px;
+  border: 2px solid #4B9CD3;
+}
+
+
+
+
+/* #projectCarouselFRONT, #projectCarouselBACK {
   position: absolute;
   right: 0;
   margin-top: 3%;
@@ -180,7 +195,7 @@ header {
 }
 .carousel-control-prev:hover, .carousel-control-next:hover {
   background: rgba(255,255,255,0.2);
-}
+} */
 .portBtn {
   color: #151513;
   background-color: rgba(210, 210, 210);
