--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -176,23 +176,37 @@ header {
   
 }
 .projectImgOverlay {
+  visibility: hidden;
+  opacity: 0;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  background-color: rgba(32, 32, 32, 0.8);
+  box-shadow: 0 5px 15px rgba(0,0,0,.5);
+  color: #FFFCF2;
+  padding: 30px;
+  transition: 0.3s;
 }
-.prjectTile:hover {
+.projectTile:hover {
   transform: scale(1.25);
   box-shadow: 0 5px 15px rgba(0,0,0,.5);
   z-index: 5;
 }
+.projectTile:hover .projectImgOverlay {
+  visibility: visible;
+  opacity: 1;
+}
 .portBtn {
-  color: #151513;
+  color: rgb(39, 39, 39);
   background-color: rgba(210, 210, 210);
+}
+.portBtn:hover {
+  color: #FFFCF2;
 }
 .portGitBtn {
   color: #FFFCF2;
-  background-color: rgb(39, 39, 39);
+  background-color: #4B9CD3;
 }
 
 
