--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -164,6 +164,10 @@ header {
 }
 .frontContainer {
   position: absolute;
+  /* z-index: 2; */
+}
+.backContainer {
+  
 }
 .backCont {
   opacity: 0;
